--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,9 +8,10 @@
 	<script src="jquery.js"></script>
 </head>
 <body>
-        <h1>XXX 的塔防遊戲</h1>
+        <h1>我最厲害 的塔防遊戲</h1>
 
 	<!-- 新的程式碼放這裡 -->
+	<canvas id="game-canvas" width="640" height="480"></canvas>
 
 	<script src="main.js"></script>
 </body>
